# JBInternProject

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Back/: Searcher.cpp  Searcher.h  ThreadPool.cpp  ThreadPool.h
Front/: App.cpp  App.h  Frame.cpp  Frame.h
